
ChangeLog
 [ + added, - removed, * changed ]
 + 11May2018 Added support for ARM64 cross-compilation (GitHub pull #11)
 * 06Apr2018 Fixed missing states for MPI_*neighbor* routines
 * 20Mar2018 Added instrumentation support for MPI_*neighbor* routines
 * 19Mar2018 Allows defining a trace-control gops interval starting at 0
 * 15Mar2018 Fixes segfault when EXTRAE_CONFIG_FILE is wrong (GitHub issue #1)
 * 28Feb2018 Fix invalid read in WriteFileBuffer_delete (GitHub pull #9)
 * 28Feb2018 Adds R/W lock in OMPT-helper functions (GitHub pull #6)
 * 13Feb2018 Adds message to warn about merger not able to open the binary to translate addresses
 * 09Feb2018 Changes index calculation when there is no nesting
 * 23Jan2018 Fixes Testsome wrapper calling PMPI_Waitsome instead of PMPI_Testsome (GitHub issue #3)
 * 09Jan2018 Added mutex to protect buffers' double frees from dying pthreads
 * 08Jan2018 Adds Skylake support in PEBS
 * 19Dec2017 Defer the initialization of each IO, DYNAMIC MEMORY and SYSTEM calls to the first time they are used
 * 13Dec2017 Increase maximum events for buffer transactions
 * 29Nov2017 Refactor utils function names
 + 09Nov2017 Extended pyextrae API with calls to nevent and neventandcounters
 * 27Oct2017 No longer set a value for OMP_NUM_THREADS if it was not defined by the user to avoid conflicts with schedulers that assign threads through omp_set_num_threads
 + 26Oct2017 Added header file extrae_version.h
 * 25Oct2017 Fixes compatibility issue accessing struct ucontext
 * 16Oct2017 Reduces maximum number of arguments in intel-kmpc wrappers
 + 13Oct2017 Added fallback mechanism for taskloop instrumentation that recovers from runtime internal copies of the instrumented parameters
 * 10Oct2017 Changes RECHECK_INIT macro so it also allocates nested helpers
 * 29Sep2017 Fixes missing OMP user functions in parallel loops
 * 29Sep2017 Fixes invalid reference to task_helper in GOMP_task and callme_task