@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 15May2018 Added configure check for MPI_Get_accumulate, BullMPI does not implement this routine
  + 11May2018 Added support for ARM64 cross-compilation (GitHub pull #11)
  * 06Apr2018 Fixed missing states for MPI_*neighbor* routines
  * 20Mar2018 Added instrumentation support for MPI_*neighbor* routines
